# easy-boiler

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.claude/: settings.json
app/: auth.py  database.py  main.py  md_parser.py  queue.py  teste-apify.py  worker.py
db/: schema.sql
docs/: topics_json_sample.json
scripts/: seed.py  teste.py
static/: pinemix.md
tests/: conftest.py  test_auth.py  test_classify.py  test_collections.py  test_dark_mode.py  test_home.py  test_i18n.py  test_library.py  test_llm_classifier.py  test_llm_output_schema.py  test_md_parser.py  test_taxonomy_service.py  test_topics.py  test_tree_builder.py  test_url_builder.py
texto/: -XFXkx1_Q64.txt  0M7_uxj_GOM.txt  2DB5d84Zr6Y.txt  3lOqiPNYRmo.txt  4zfuxRttxrk.txt  5cbibtpn76o.txt  5mKj23Om3ik.txt  63fUyiiintM.txt  83LMNqaDfUE.txt  (+68 more)
texto-bkp/: -XFXkx1_Q64.txt  0M7_uxj_GOM.txt  2DB5d84Zr6Y.txt  4zfuxRttxrk.txt  5cbibtpn76o.txt  5mKj23Om3ik.txt  63fUyiiintM.txt  83LMNqaDfUE.txt  8FMLuNcuf10.txt  8Sbs_teHK9E.txt  9XfJSNx8tko.txt  Hq_yfEiGv8o.txt  NFKCqMCksDs.txt  NnNaCKq7p4A.txt  O0jcr2kDsXw.txt  Ps2B3vH5Vt0.txt  QObxLh4BMEQ.txt  QWnUMIqJLnk.txt  SP83HG-cCIE.txt  SbspGxCQN2M.txt  Yqy_GoTXltM.txt  _CxsHiCOCzI.txt  b4BeoxJtdcg.txt  cSIzH1p1n0g.txt  cXJI-VOA1ac.txt  cZjUTNxxMY0.txt  dcSoevONHYg.txt  dx0X_jG9fWc.txt  eiXTtpB_z7k.txt  f2vFMqp925s.txt  fEfaV__qhk8.txt  falhas.txt  iGiSMZQY36Q.txt  itnu-A3bNAY.txt  mEfipe7Yrqk.txt  nIa8YKzAVYQ.txt  o7cp5LOSs3o.txt  oHfq6ZAFgJk.txt  oqvH08FwdfE.txt  rrKnn5KdRFI.txt  (+9 more)
(+107 files in other folders)
