[project]
name = "easy-boiler"
version = "0.1.0"
description = "FastAPI boilerplate with a YouTube transcript helper script."
requires-python = ">=3.12"
dependencies = [
    "aiosqlite",
    "authlib",
    "fastapi",
    "httpx>=0.27",
    "jinja2",
    "passlib[bcrypt]",
    "pymupdf>=1.25",
    "python-dotenv",
    "yt-dlp",
    "uvicorn[standard]",
    "youtube-transcript-api",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.22",
    "openai>=2.30.0",
    "sqlite-vec>=0.1.6",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
